<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="50dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tictactoe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_player_names"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player1_name"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player2_name"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20dp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/start_game"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"/>
</LinearLayout>