<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="30dp"
            android:textColor="@color/orange"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvNamePlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_score"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvScorePlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_score"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/tvNamePlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/player2_score"
                android:textColor="@color/black"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tvScorePlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/start_score"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_round"
            android:textSize="24dp"
            android:textColor="@color/orange"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn00"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn01"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn02"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn10"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn11"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn12"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn20"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn21"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn22"
                    android:layout_width="80dp"
                    android:layout_height="105dp"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/grey"
                    android:textSize="40dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/end_game"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"/>
</LinearLayout>